# calendar-solver

./: .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: solutions.txt
source/calendar_solver/: exact_cover_solver.py  solver.py
tests/: test_has_deadends.py  test_solve.py
tests/exact_cover/: test_coordinate_calculation.py
