[project]
name = "calendar-solver"
version = "0.1.0"
description = "Solver for pentominoes calendar puzzle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.6.0",
    "numba>=0.61.0",
    "numpy>=2.0.2",
]

[project.scripts]
calendar-solver = "calendar_solver.solver:main"

[dependency-groups]
test = []
dev = [
    { include-group = "test" },
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/calendar_solver"]
