[project]
name = "calendar-solver"
version = "0.1.0"
description = "Solver for pentominoes calendar puzzle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "exact-cover>=1.5.0",
    "more-itertools>=10.6.0",
    "numpy>=2.0.2",
    "scipy>=1.15.2",
]

[project.scripts]
calendar-solver = "calendar_solver.solver:main"
calendar-solver-ec = "calendar_solver.exact_cover_solver:main"


[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    { include-group = "test" },
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/calendar_solver"]
